some imgs also golden idol

--- a/ddr/ddr.html
+++ b/ddr/ddr.html
@@ -364,7 +364,7 @@
   	"air": "80",
   	"voltage": "10",
 				"bpm":"133",
-				"img":"img/1157.png",
+				"img":"img/boomboom.png",
 				"mp3":"mp3/boomboom.mp3"
 			},
 			{
@@ -412,7 +412,7 @@
   	"air": "40",
   	"voltage": "70",
 				"bpm":"100",
-				"img":"img/1743.png",
+				"img":"img/wavwav.png",
 				"mp3":"mp3/wavwav.mp3"
 			},
 			{
@@ -508,7 +508,7 @@
   	"air": "40",
   	"voltage": "10",
 				"bpm":"94",
-				"img":"img/1157.png",
+				"img":"img/yabai.png",
 				"mp3":"mp3/yabai.mp3"
 			},
 			{
