--- a/ddr/ddr.html
+++ b/ddr/ddr.html
@@ -310,7 +310,7 @@
 	
 	<div class="select" style="height:65px;border-radius:0px;margin:0px;">
 		
-		<audio autoplay id="audioplayer">
+		<audio autoplay volume=".5" id="audioplayer">
 		  <source src="mp3/eboyfriend.mp3" type="audio/mpeg" data-song="song" id="audiosource">
 		</audio>
 		
