--- a/ddr/ddr.html
+++ b/ddr/ddr.html
@@ -340,7 +340,7 @@
   	"air": "10",
   	"voltage": "50",
 				"bpm":"138",
-				"img":"img/1743.png",
+				"img":"img/evan.png",
 				"mp3":"mp3/evanandchan.mp3"
 			},
 			{
@@ -376,7 +376,7 @@
   	"air": "50",
   	"voltage": "80",
 				"bpm":"155",
-				"img":"img/1743.png",
+				"img":"img/nightoffire.png",
 				"mp3":"mp3/nightoffire.mp3"
 			},
 			{
@@ -400,7 +400,7 @@
   	"air": "20",
   	"voltage": "90",
 				"bpm":"160",
-				"img":"img/1157.png",
+				"img":"img/molchat.png",
 				"mp3":"mp3/cудно.mp3"
 			},
 			{
@@ -436,7 +436,7 @@
   	"air": "10",
   	"voltage": "40",
 				"bpm":"138",
-				"img":"img/1157.png",
+				"img":"img/silence.png",
 				"mp3":"mp3/silence.mp3"
 			},
 			{
@@ -448,7 +448,7 @@
   	"air": "40",
   	"voltage": "30",
 				"bpm":"128",
-				"img":"img/1743.png",
+				"img":"img/dance.png",
 				"mp3":"mp3/dancemypainaway.mp3"
 			},
 			{
@@ -460,7 +460,7 @@
   	"air": "30",
   	"voltage": "60",
 				"bpm":"135",
-				"img":"img/1157.png",
+				"img":"img/swampthing.png",
 				"mp3":"mp3/swampthing.mp3"
 			},
 			{
@@ -532,7 +532,7 @@
   	"air": "20",
   	"voltage": "10",
 				"bpm":"143",
-				"img":"img/1157.png",
+				"img":"img/onlineguy.png",
 				"mp3":"mp3/veryonlineguy.mp3"
 			},
 			{
@@ -568,7 +568,7 @@
   	"air": "60",
   	"voltage": "40",
 				"bpm":"112",
-				"img":"img/1157.png",
+				"img":"img/jackdafunk.png",
 				"mp3":"mp3/jackdafunk.mp3"
 			},
 			{
@@ -604,7 +604,7 @@
   	"air": "20",
   	"voltage": "10",
 				"bpm":"100",
-				"img":"img/1157.png",
+				"img":"img/youngblood.png",
 				"mp3":"mp3/youngblood.mp3"
 			},
 			{
