--- a/ddr/ddr.html
+++ b/ddr/ddr.html
@@ -628,7 +628,7 @@
   	"air": "0",
   	"voltage": "80",
 				"bpm":"127",
-				"img":"img/1157.png",
+				"img":"img/hippies.png",
 				"mp3":"mp3/hippies.mp3"
 			},
 			{
