--- a/ddr/ddr.html
+++ b/ddr/ddr.html
@@ -460,7 +460,7 @@
   	"air": "30",
   	"voltage": "60",
 				"bpm":"135",
-				"img":"img/swampthing.png",
+				"img":"img/swampthing.jpg",
 				"mp3":"mp3/swampthing.mp3"
 			},
 			{
