--- a/ddr/ddr.html
+++ b/ddr/ddr.html
@@ -376,7 +376,7 @@
   	"air": "50",
   	"voltage": "80",
 				"bpm":"155",
-				"img":"img/1743.png",
+				"img":"img/nightoffire.png",
 				"mp3":"mp3/nightoffire.mp3"
 			},
 			{
@@ -436,7 +436,7 @@
   	"air": "10",
   	"voltage": "40",
 				"bpm":"138",
-				"img":"img/1157.png",
+				"img":"img/silence.png",
 				"mp3":"mp3/silence.mp3"
 			},
 			{
@@ -460,7 +460,7 @@
   	"air": "30",
   	"voltage": "60",
 				"bpm":"135",
-				"img":"img/1157.png",
+				"img":"img/swampthing.jpg",
 				"mp3":"mp3/swampthing.mp3"
 			},
 			{
@@ -568,7 +568,7 @@
   	"air": "60",
   	"voltage": "40",
 				"bpm":"112",
-				"img":"img/1157.png",
+				"img":"img/jackdafunk.png",
 				"mp3":"mp3/jackdafunk.mp3"
 			},
 			{
@@ -628,7 +628,7 @@
   	"air": "0",
   	"voltage": "80",
 				"bpm":"127",
-				"img":"img/1157.png",
+				"img":"img/hippies.png",
 				"mp3":"mp3/hippies.mp3"
 			},
 			{
@@ -814,7 +814,7 @@
 			audioPlayer.load();
 			audioPlayer.play();
 			
-			audioPlayer.volume = 0.05;
+			audioPlayer.volume = 0.1;
 		}
 		
 		function findIndex(entry) {
