--- a/readytowork/readytowork.html
+++ b/readytowork/readytowork.html
@@ -10,14 +10,19 @@
 		  	font-size: 14px;
 		  	font-family: "Noto Serif";
 		  	background-color: #212121;
+			color: #e3e3e3;
+			width:80%;
+			margin:auto;
 		}
         #map {
             height: 400px;
-            width: 80%;
-			margin: 40px auto;
+            width: 100%;
+			margin: 20px auto;
         }
 		#tags {
-			margin:20px;
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
 		}
 	    input[type="checkbox"] {
 	      width: 20px;
@@ -30,6 +35,7 @@
 			color: #e3e3e3;
 			display: inline-block;
 			white-space: nowrap;
+			flex: 0 0 20%;
 		}
 	    button{
 	  	  font-family: "Noto Serif";
@@ -40,6 +46,7 @@
 		  font-size: 14px;
 		  border-radius: 16px;
 		  padding: 8px;
+		  cursor:pointer;
 	    }
   
 	    button:hover {
@@ -50,17 +57,43 @@
 		#play {
 		    cursor: pointer;
 		}
+		
+		a:link{color:#db9c42;}
+		a:visited{color:#757541;}
+		a:hover{color:#d3b690;}
+		
+		*{
+			//outline: 1px solid red;
+		}
+		
     </style>
 </head>
 <body>
-    <div id="map"></div>
-    <div id="tags"></div>
-	<div style="text-align:center;"><button onclick="checkAll()">check all</button><button onclick="uncheckAll()">uncheck all</button></div>
-	<div style="margin:auto;"><img src="peon.gif" id="play">
 	
+	<div style="display:flex;flex-direction:row;padding: 20px 0;">
+		<div style="display: flex;align-items: center;"><img src="ubc.png" width="100px"></div>
+		
+		<div style="margin-left:20px">
+			<h2>LA Team Ready to Work Map</h2>
+			
+			<p>The data in this map is pulled from the Ready to Work list available on <a href="https://www.flowcode.com/page/carpenterslocal213">Local 213's flowcode</a>. It is current as of <strong>3/1/24</strong>. If you encounter errors or have design feedback, contact me at <a href="mailto:sophiafosterdimino@gmail.com">sophiafosterdimino@gmail.com</a>.</p>
+			
+		</div>
+	</div>
+	
+    <div id="map"></div>
+	
+	<div style="display:flex;flex-direction:row;">
+		
+		<div style="display: flex;flex-direction: column;justify-content: space-around;"><button onclick="checkAll()">check all</button><button onclick="uncheckAll()">uncheck all</button></div>
+		
+		<div id="tags" style="padding-left:20px"></div>
+
+	</div>
+	
+	<div style="margin:auto;text-align:right;"><img src="peon.gif" id="play">
 	<audio id="audioPlayer">
 		<source src="ready-to-work.mp3" type="audio/mpeg">
-		Your browser does not support the audio element.
 	</audio>
 	</div>
 
