--- a/goldenidol/goldenidol.html
+++ b/goldenidol/goldenidol.html
@@ -175,6 +175,11 @@
 			display:inline-block;
 			cursor: pointer;
 			position:relative;
+			color:#ffec51;
+			text-align:center;
+			height:50px;
+			width:50px;
+			line-height:50px;
 		}
 		
 		.sparkle:hover;{
@@ -194,6 +199,7 @@
 			padding:8px 20px;
 			font-size:1em;
 			max-width:50%;
+			visibility:visible;
 		}
 		
 		.wordtoget{
@@ -209,6 +215,19 @@
 			text-decoration: dotted underline red;
 		}
 		
+		.overlay {
+		  position: absolute;
+		  top: 0;
+		  left: 0;
+		  width: 100%;
+		  height: 100%;
+		  background-color: rgba(0, 0, 100, 0.5);
+		}
+		
+		.invisible {
+			visibility:hidden;
+		}
+		
 		*{
 			outline: 1px solid red;
 		}
@@ -221,9 +240,13 @@
 	
 	<div id="exploring">
 		
-		<div class="sparkle" style="left:20%;top:50%;" data-target="window1">✧</div>
+		<div class="sparkle" style="left:20%;top:50%;" id="sparkle" data-target="window1">✧</div>
 		
+		<div id="overlay" class="overlay invisible">
+			
 		<div class="explorewindow border hidden" id="window1">hey <span class="wordtoget" id="Albert">Albert</span> blah blah blah <span class="wordtoget" id="Thumb">Thumb</span></div>
+		
+		</div>
 		
 	</div>
 	
@@ -252,6 +275,7 @@
 	
 	<script>
 		
+		// all gettable words and their type
 		const worddata = [
 			{
 				"word": "Albert",
@@ -285,15 +309,23 @@
 			}
 		]
 
+		// holes in thinking where words need to go
 		const holes = document.querySelectorAll('.empty');
 
+		// various divs
 		const exploring = document.getElementById('exploring');
 		const thinking = document.getElementById('thinking');
 		const arrow = document.getElementById('arrow');
 		var expthink = document.getElementById('exploringthinking');
+		const overlay = document.getElementById('overlay');
+		
+		var windows = document.querySelectorAll('.explorewindow');
+		
+		// divs in the bottom of the screen
 		var bottomholder = document.getElementById('bottomholder');
 		var wordholder = document.getElementById('wordholder');
 		
+		// changeable numbers
 		var gotwordsholder = document.getElementById('gotwordsholder');
 		var gotwordsnumholder = document.getElementById('gotwordsnum');
 		var maxgotwordsholder = document.getElementById('maxgotwords');
@@ -302,6 +334,7 @@
 		
 		var dragged = null;
 		
+		// positioning the exploring thinking toggle
 		var bottomrect = bottomholder.getBoundingClientRect();
 		var bottomwidth = Math.round(bottomrect.width);
 		var bottomheight = Math.round(bottomrect.height);
@@ -311,23 +344,38 @@
 		expthink.style.top = (Math.round((bottomrect.top) - (expthinkheight))).toString() + "px"
 		expthink.style.left = (Math.round((bottomrect.left) + (.5 * bottomwidth) - (.5 * expthinkwidth))).toString() + "px"
 		
+		// sparkles which open explore windows
 		const sparkles = document.querySelectorAll(".sparkle");
+		const sparkle = document.getElementById('sparkle');
 
 		sparkles.forEach(sparkle => {
-			console.log("sparkling")
 		  sparkle.addEventListener('click', function() {
-			  console.log("clicking")
 		    const targetWindowId = sparkle.dataset.target;
 		    const targetWindow = document.getElementById(targetWindowId);
-		    if (targetWindow) {
-		      targetWindow.classList.toggle('hidden');
-			  console.log(targetWindow)
-		    }
+			targetWindow.classList.toggle('hidden');
+			console.log(targetWindow);
+			overlay.classList.toggle('invisible');
 		  });
 		});
 		
+		windows.forEach(window => {
+			window.addEventListener('click', function(event) {
+			  event.stopPropagation();
+			});
+		})
+		
+		// overlay
+		overlay.addEventListener('click', function(){
+			windows.forEach(window => {
+				window.classList.add('hidden');
+			});
+			overlay.classList.toggle('invisible');
+		});
+
+		// words that need to be grabbed
 		const wordstoget = document.querySelectorAll('.wordtoget');
 		
+		// add words if they are already marked as found
 		worddata.forEach((word) => {
 			if(word.found === true){
 				console.log("adding "+word)
@@ -335,6 +383,7 @@
 			}
 		});
 		
+		// how to add words to the gotwordsholder
 		function addword(word){
 			var newword = document.createElement("span");
 			newword.classList.add("field","word");
@@ -349,15 +398,18 @@
 			gotwordsnumholder.textContent = gotwordsnum.toString();
 		}
 		
+		// make holes able to recieve words
 	    holes.forEach(hole => {
 	        hole.addEventListener('dragover', dragOver);
 	        hole.addEventListener('drop', drop);
 	    });
 		
+		// make words able to be got
 	    wordstoget.forEach(word => {
 	        word.addEventListener('click', getword)
 	    });
 		
+		// how to get a word
 		function getword(event){
 			console.log(event.target);
 			event.target.classList.remove('wordtoget');
@@ -367,6 +419,7 @@
 			addword(findentry(event.target.id));
 		}
 		
+		// how to look up words in the js object
 		function findentry(thisword) {
 		  for (var i = 0; i < worddata.length; i++) {
 		    if (worddata[i].word === thisword) {
@@ -375,6 +428,8 @@
 		  }
 		  return null;
 		}
+
+		// click and drag behavior
 
 	    function dragStart(event) {
 			const nameghost = document.createElement("span");
@@ -431,19 +486,34 @@
 			}
 	    }
 		
+		// toggle between exploring and thinking
 		expthink.addEventListener('click', function() {
 		  arrow.classList.toggle('rotate');
 		  exploring.classList.toggle('hidden');
 		  thinking.classList.toggle('hidden');
 		});
 		
+		const characters = ['·', '⊹', '+', '✦', '✧', '○', '◌', ''];
+
+		const fontSizes = ['60%', '50%', '80%', '100%', '150%', '60%', '40%','100%'];
+
+		let frameIndex = 0;
+
+		function animateSparkle() {
+			setInterval(() => {
+				sparkle.textContent = characters[frameIndex];
+				sparkle.style.fontSize = fontSizes[frameIndex];
+				frameIndex = (frameIndex + 1) % characters.length;
+			}, 250);
+		}
+
+		animateSparkle();
+		
 		/*
 		
 		todo:
 		
-		change underline container to absolute
-		
-		open and close underline container with overlay
+		make sparkle red
 		
 		work on being able to continue to move words around
 		
