--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
 	
 	<div>🎶 <a href="jmix/index.html">jmix</a></div>
 	
+	<div>⬅️⬆️ <a href="jmix/index.html">ddr selection screen</a></div>
+	
 </body>
 </html>
